3.3.0/_sources/gallery/images_contours_and_fields/spy_demos.rst.txt
.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_images_contours_and_fields_spy_demos.py>`     to download the full example code
    .. rst-class:: sphx-glr-example-title

    .. _sphx_glr_gallery_images_contours_and_fields_spy_demos.py:


=========
Spy Demos
=========

Plot the sparsity pattern of arrays.


.. code-block:: default


    import matplotlib.pyplot as plt
    import numpy as np


    # Fixing random state for reproducibility
    np.random.seed(19680801)

    fig, axs = plt.subplots(2, 2)
    ax1 = axs[0, 0]
    ax2 = axs[0, 1]
    ax3 = axs[1, 0]
    ax4 = axs[1, 1]

    x = np.random.randn(20, 20)
    x[5, :] = 0.
    x[:, 12] = 0.

    ax1.spy(x, markersize=5)
    ax2.spy(x, precision=0.1, markersize=5)

    ax3.spy(x)
    ax4.spy(x, precision=0.1)

    plt.show()




.. image:: /gallery/images_contours_and_fields/images/sphx_glr_spy_demos_001.png
    :alt: spy demos
    :class: sphx-glr-single-img





------------

References
""""""""""

The use of the following functions, methods and classes is shown
in this example:


.. code-block:: default


    import matplotlib
    matplotlib.axes.Axes.spy
    matplotlib.pyplot.spy




.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    <function spy at 0x7fda9e4b8af0>




.. _sphx_glr_download_gallery_images_contours_and_fields_spy_demos.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: spy_demos.py <spy_demos.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: spy_demos.ipynb <spy_demos.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
